support jdk11 in admin